Update multiple files with new changes

--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me - AltSchool Africa</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/media.css" />
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
       <!-- Image -->
       <section>
         <h2>Image</h2>
-        <img src="media elements/image.png" alt="A picture of me" />
+        <img src="./Images/image.png" alt="A picture of me" />
       </section>
 
       <!-- Picture Element -->
@@ -31,13 +31,13 @@
         <picture>
           <source
             media="(min-width: 1024px)"
-            srcset="media elements/image.png"
+            srcset="./Images/image.png"
           />
           <source
             media="(min-width: 768px)"
             srcset="media elements/image.png"
           />
-          <img src="media elements/image.png" alt="A picture of me" />
+          <img src="./Images/image.png" alt="A picture of me" />
         </picture>
       </section>
 
@@ -45,7 +45,7 @@
       <section>
         <h2>Audio</h2>
         <audio controls>
-          <source src="media elements/Audio.m4a" type="audio/m4a" />
+          <source src="./Images/Audio.m4a" type="audio/m4a" />
           Your browser does not support the audio element.
         </audio>
       </section>
@@ -54,7 +54,7 @@
       <section>
         <h2>Video</h2>
         <video width="320" height="240" controls>
-          <source src="media elements/video.MP4" type="video/mp4" />
+          <source src="./Images/video.MP4" type="video/mp4" />
         </video>
       </section>
 
@@ -62,7 +62,7 @@
       <section>
         <h2>Embed</h2>
         <embed
-          src="media elements/GitVersionControlCookbookSecondEdition_ColorImages-2.pdf"
+          src="./Images/GitVersionControlCookbookSecondEdition_ColorImages-2.pdf"
           width="600"
           height="400"
         />
