--- a/about.html
+++ b/about.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/about.css"/>
+    <a href="form.html">AltSchool Form</a>
+    <a href="media.html">media</a>
+    <a href="table.html">courses</a>
   </head>
   <body>
     <header>
